update project, add Flat-Service realization